[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
jsonxf = "1.1.1" #json pretty print格式化
mime = "0.3.17"
reqwest = {version = "0.12.8" , features = ["json"]}
tokio = {version = "1.40.0", features = ["full"]}
